# rasqal

./: .gitattributes  .gitignore  CITATION.cff  README.md  build.ps1  building.md  cla.json  contributor_license_agreement.md  development.md  examples.md  features.md  features_and_concepts.md
.github/: CODEOWNERS  release.yml
.github/actions/install-llvm/: action.yml
.github/actions/rust-toolchain/: action.yml
.github/workflows/: build.yaml  cache-refresh.yaml  cla-assistant.yaml  deploy-wheels.yaml  deploy-wheels.yml
docs/: FAQ.md  examples.py  features_and_concepts.md  quick_start.md
docs/papers/: README.md
examples/: README.md  examples.py  pyproject.toml  sandbox.py  utils.py
examples/qir/: base-profile-bell.ll  basic-branching.ll  basic-loops.ll  nested-calls.ll  qaoa.ll
examples/qsharp/: sandbox.ll
examples/qsharp/src/: main.qs
src/: .rustfmt.toml  Cargo.toml  deny.toml  mypy.ini
src/build-llvm/: CMakeLists.txt  Cargo.toml  build.rs
src/munchkin/: Cargo.toml  README.md  build.ps1  deny.toml  mypy.ini  pyproject.toml
src/munchkin/build-llvm/: CMakeLists.txt  Cargo.toml  build.rs  external.rs
src/munchkin/munchqin/: adaptors.py  logger.py  routing.py  runtime.py
src/munchkin/pykin/: Cargo.toml  README.md  pyproject.toml
src/munchkin/pykin/munchqin/: adaptors.py  runtime.py  simulators.py  utils.py
src/munchkin/pykin/pykin/: __init__.py  _native.pyi  logger.py  runtime.py  simulators.py
src/munchkin/pykin/src/: analysis.rs  blueprints.rs  builders.rs  evaluator.rs  execution.rs  features.rs  graphs.rs  hardware.rs  instructions.rs  lib.rs  python.rs  runtime.rs  smart_pointers.rs
src/munchkin/scripts/: build.ps1  psakefile.ps1  utils.ps1
src/munchkin/src/: analysis.rs  builders.rs  evaluator.rs  execution.rs  features.rs  graphs.rs  instructions.rs  lib.rs  python.rs  runtime.rs  smart_pointers.rs
src/munchkin/tests/: rust_python_integration.py  test_munchkin.py
src/munchkin/tests/qsharp/: qir_projects.sln
src/munchkin/tests/qsharp/VQE/: Program.qs
src/munchkin/tests/qsharp/bit-flip-code/qir/: bit-flip-code.ll
src/munchkin/tests/qsharp/hydrogen-sim/qir/: VQE.ll  hydrogen-sim.ll
src/munchkin/tests/qsharp/interlinked/: Program.qs
src/munchkin/tests/qsharp/minified-oracle-generator/qir/: minified-oracle-generator.ll
src/munchkin/tests/qsharp/oracle-generator/: Library.qs
src/munchkin/tests/qsharp/oracle-generator/qir/: oracle-generator.ll
src/munchkin/tests/qsharp/parallel-half-moons/: parallel-half-moons.csproj
src/munchkin/tests/qsharp/parallel-half-moons/qir/: parallel-half-moons.ll
src/munchkin/tests/qsharp/qaoa/: QAOA.csproj  QAOA.qs
src/munchkin/tests/qsharp/qaoa/qir/: QAOA.ll  qaoa.ll
src/munchkin/tests/qsharp/repeat-until/: Program.qs  repeat_until.qs  vgaterus.qs
src/munchkin/tests/qsharp/repeat-until/qir/: repeat-until.ll
src/munchkin/tests/qsharp/simplified-oracle-generator/: Library.qs  simplified-oracle-generator.csproj
src/munchkin/tests/qsharp/simplified-oracle-generator/qir/: simplified-oracle-generator.ll
src/pykin/munchqin/: routing.py  simulators.py
src/pykin/src/: analysis.rs  runtime.rs
src/rasqal/: .ruff.toml  Cargo.toml  README.md  pyproject.toml
src/rasqal/rasqal/: _native.pyi  adaptors.py  logger.py  routing.py  runtime.py  simulators.py  utils.py
src/rasqal/src/: analysis.rs  builders.rs  config.rs  evaluator.rs  exceptions.rs  execution.rs  features.rs  graphs.rs  hardware.rs  instructions.rs  lib.rs  python.rs  runtime.rs  smart_pointers.rs
src/rasqal/src/analysis/: mod.rs  projections.rs  solver.rs
src/scripts/: build.ps1  psakefile.ps1  utils.ps1
src/tests/: __init__.py  file_utils.py  test_munchkin.py  test_rasqal.py
src/tests/files/qir/: bell_int_return.ll  unrestricted_bell.ll
src/tests/files/qir/large/: 500qb20k.ll
src/tests/qsharp/: qir_projects.sln
src/tests/qsharp/basic-branching/: Library.qs
src/tests/qsharp/basic-branching/qir/: basic-branching.ll
src/tests/qsharp/basic-loops/: Library.qs
src/tests/qsharp/basic-loops/qir/: basic-loops.ll
src/tests/qsharp/def-classical-expression/: Library.qs
src/tests/qsharp/def-classical-expression/qir/: def-classical-expression.ll  simplified-oracle-generator.ll
src/tests/qsharp/interlinked/: interlinked.csproj
src/tests/qsharp/interlinked/qir/: VQE.ll
src/tests/qsharp/minified-oracle-generator/: Library.qs
src/tests/qsharp/minified-oracle-generator/qir/: minified-oracle-generator.ll
src/tests/qsharp/nested-calls/: Library.qs
src/tests/qsharp/nested-calls/qir/: nested-calls.ll
src/tests/qsharp/oracle-generator/qir/: oracle-generator.ll
src/tests/qsharp/qaoa/qir/: qaoa.ll
src/tests/qsharp/simplified-oracle-generator/: Library.qs
src/tests/qsharp/simplified-oracle-generator/qir/: simplified-oracle-generator.ll
