[package]
authors = ["John Dumbell"]
name = "munchkin"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
description = ""
homepage = ""
repository = ""

[dependencies.inkwell]
git = "https://github.com/TheDan64/inkwell"
branch = "master"
default-features = false
features = ["llvm14-0"]

[dependencies]
either = "1.8"
libc = "0.2"
const-str = "0.5"
pyo3 = { version = "0.17", features = ["abi3-py37", "extension-module", "auto-initialize", "num-complex"] }
llvm-sys = "140"
regex = "1.7.1"
log = "0.4.17"
env_logger = "0.9.3"
ctor = "0.2.2"
num = "0.4.0"
bitflags = "2.4.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "munchqin._native"
