[package]
authors = ["John Dumbell"]
name = "rasqal"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
description = ""
homepage = ""
repository = ""

[dependencies.inkwell]
git = "https://github.com/TheDan64/inkwell"
branch = "master"
default-features = false
features = ["llvm14-0"]

[dependencies.pyo3]
version = "0.17"
# pyo3 has problems with running cargo test and extension modules. Group them here so that we can disable 'default' features when running cargo test.
# Add all features like normal as enabled features unless they mess with cargo test, which then means they go as a default.
features = ["num-complex"]
default = ["abi3-py37", "extension-module"]

[dependencies]
either = "1.8"
libc = "0.2"
const-str = "0.5"
llvm-sys = "140"
regex = "1.7.1"
log = "0.4.17"
env_logger = "0.9.3"
ctor = "0.2.2"
num = "0.4.0"
bitflags = "2.4.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "rasqal._native"
