[project]
name = "rasqal"
version = "0.1.7"
requires-python = ">=3.10"
description = "A hybrid quantum-classical analysis/solving runtime."
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

authors = [
    { name = "John Dumbell", email = "john.dumbell42@gmail.com" }
]

dependencies = [
    "qiskit==0.45.*,<1.0.0",
    "qiskit-optimization>=0.4.0",
    "qiskit-ignis>=0.7.0",
    "qiskit-aer>=0.13.0",
    "pytket>=1.31.0"
]

[project.urls]
Repository = "https://github.com/oqc-community/rasqal.git"
Issues = "https://github.com/oqc-community/rasqal/issues"

[build-system]
requires = ["maturin ~= 0.13.7"]
build-backend = "maturin"
