[package]
name = "build-llvm"
version = "0.1.0"
edition = "2021"
license = ""
description = ""
build = "build.rs"
readme = "README.md"
homepage = ""
repository = ""
rust-version = "1.64"

[dependencies]
bitvec = "1.0"
const-str = "0.5"
lazy_static = "1.4"
llvm-sys-140 = { package = "llvm-sys", version = "140.0", optional = true }
log = "0.4"
mut_static = "5.0"

[dev-dependencies]
serial_test = "0.9"
normalize-line-endings = "0.3"

[build-dependencies]
cmake = "0.1"
cc = "1.0"
lazy_static = "1.4"

[features]
llvm14-0 = ["llvm-sys-140"]

# default to use llvm-sys for llvm linking
default = ["external-llvm-linking", "llvm14-0"]
external-llvm-linking = []

# disable linking for local installation or packaging
# no-llvm-linking is marker used in the cfg checks
llvm14-0-no-llvm-linking = ["llvm14-0", "no-llvm-linking", "llvm-sys-140/disable-alltargets-init", "llvm-sys-140/no-llvm-linking"]

no-llvm-linking = []

# let us do the llvm linking
# internal-llvm-linking is marker used in the cfg checks
llvm14-0-qirlib-llvm-linking = ["llvm14-0", "internal-llvm-linking", "llvm-sys-140/disable-alltargets-init", "llvm-sys-140/no-llvm-linking"]

internal-llvm-linking = []
download-llvm = []
build-llvm = []

# Dev use only for packaging LLVM builds
package-llvm = ["build-llvm", "no-llvm-linking"]
