[project]
name = "munchqin"
version = "0.1.0"
requires-python = ">=3.9"
description = "A dynamically executed quantum-classical hybrid runtime."
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
authors = [
    { name = "John Dumbell", email = "euphoricEulogy@gmail.com" }
]

dependencies = [
    "pytest",
    "qiskit==0.45.*",
    "qiskit-optimization==0.4.*",
    "qiskit-ignis==0.7.*",
    "qiskit-aer==0.13.*",
]

[project.urls]
Documentation = "https://readthedocs.org"
Repository = "https://github.com/oqc-community/munchkin.git"
Issues = "https://github.com/oqc-community/munchkin/issues"

[build-system]
requires = ["maturin ~= 0.13.7"]
build-backend = "maturin"
